--- a/content/layouts/index.html
+++ b/content/layouts/index.html
@@ -3,15 +3,16 @@
 {{ end }}
 
 {{ define "main" }}
-    <main aria-role="main" class="post">
+    <main aria-role="main">
         <div>
             {{ if .Site.Params.Portrait.Path }}
                <img src="{{ .Site.Params.Portrait.Path }}" class="circle" alt="{{ .Site.Params.Portrait.Alt }}" style="max-width:{{ .Site.Params.Portrait.MaxWidth }}" />
             {{ end }}
 
-            <div class="post-content">
-                <p>{{ .Content }}</p>
-            </div>
+            <h1>{{ .Site.Title }}</h1>
+            {{- with .Site.Params.homeSubtitle }}
+                <p>{{.}}</p>
+            {{- end }}
 
             {{- with .Site.Params.social }}
                 <div>
